# scheme-service/src/main/java/uk/gov/justice/laa/fee/scheme/entity/CertFeeSchemeEntity.java
@@ -1,0 +1,43 @@
+package uk.gov.justice.laa.fee.scheme.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Size;
+import java.time.LocalDate;
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+@Entity
+@Table(name = "cert_fee_scheme", schema = "cert_fee_scheme")
+public class CertFeeSchemeEntity {
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  @Column(name = "id", nullable = false)
+  private Integer id;
+
+  @Size(max = 50)
+  @NotNull
+  @Column(name = "scheme_code", nullable = false, length = 50)
+  private String schemeCode;
+
+  @Size(max = 255)
+  @NotNull
+  @Column(name = "scheme_name", nullable = false)
+  private String schemeName;
+
+  @NotNull
+  @Column(name = "effective_from", nullable = false)
+  private LocalDate effectiveFrom;
+
+  @Column(name = "effective_to")
+  private LocalDate effectiveTo;
+
+}
+
